--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   flutter_bloc: ^6.1.3
   equatable: ^2.0.3
   flutter_screenutil: ^5.0.3
-  google_fonts: ^2.2.0
+  google_fonts: ^1.1.2
+  dio: ^3.0.10
 
 dev_dependencies:
   flutter_test:
