--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use with the CupertinoIcons class for iOS style icons.flutter
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.0.3
   google_fonts: ^2.2.0
@@ -44,6 +44,7 @@ dependencies:
   rxdart: ^0.27.3
   shared_preferences: ^2.0.12
   sqflite: ^2.0.1
+  android_alarm_manager: ^2.0.0
 
 dev_dependencies:
   flutter_test:
